<resources>
    <string name="app_name">Demos</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_txt">Email</string>
    <string name="password_txt">Mot de Passe</string>
    <string name="title_txt">Title..</string>
    <string name="prompt_txt">prompt..</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="notification_updated">lorem ipsum bla bla..</string>
    <string name="update">update..</string>
    <string name="notification_title">title..</string>
    <string name="notification_text">notification text..</string>
    <string name="notification_channel_name">channel name</string>
    <string name="notification_channel_description">channel desc..</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="upload_txt">Upload</string>
    <string name="signature_txt">Signature</string>
    <string name="pdfgenerate_txt">PDF (Generate)</string>
    <string name="notification_txt">Notification</string>
    <string name="fragments_txt">Fragments</string>
    <string name="drawer_txt">Drawer</string>
    <string name="charts_txt">Charts</string>
</resources>